Bug 51243 - Trying to edit a report from new (but awful) Report Builder hangs libreoffice
Summary: Trying to edit a report from new (but awful) Report Builder hangs libreoffice
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
3.5.5.1 rc
Hardware: x86-64 (AMD64) Linux (All)
: medium blocker
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:3.5.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-06-19 15:05 UTC by Ralph Peters
Modified: 2012-06-28 16:00 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Base file to use for testing (83.09 KB, application/vnd.oasis.opendocument.database)
2012-06-19 15:05 UTC, Ralph Peters
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Peters 2012-06-19 15:05:26 UTC
Created attachment 63239 [details]
Base file to use for testing

If I open a report made with new Report builder (libobasis3.5-extension-report-builder_3.5.5-1_amd64.deb) and right click edit (see instructions below for fixing a simple problem with the report) both the LO Base and the LO Writer (for the report) hang.  Checking processes, I see that soffice.bin is running at 100%.

Instructions:
1) Open ccts_tst_minus_defrag.odb with LO Base.
2) Open Report "Query_journal_NEW_REPORT_BUILDER"
3) Right click edit to allow me to fix a problem -- all of LO  hangs.

If one substitutes for 3) above:

3_alt) "Save a copy" of report, LO hangs again after saving the copy of the report.

-------------------------------------------------------------

INSTRUCTIONS to fix not-enough-rows to show data problem:

This is bug fdo#45789, see
https://bugs.freedesktop.org/show_bug.cgi?id=45789

In the meantime, you can (manually or with a Basic macro) do:

 - open report
 - right click, edit
 - select all rows
 - right click, row, optimal height

It sucks, I know.
Comment 1 Ralph Peters 2012-06-19 15:32:32 UTC
BTW, I tried this with 3.4.3 and everything worked fine -- no hanging.

A NEW VERSION OF SOFTWARE (E.G., LIBREOFFICE) SHOULD NOT BE REMARKABLY WORSE THAN THE PREVIOUS VERSION!!
Comment 2 Lionel Elie Mamane 2012-06-19 20:37:31 UTC
I can reproduce with LibreOffice 3.5.5.RC1 binaries (deb packages), but not every time. E.g. it can work OK 5 times in a row, but then on the 6th time I get the freeze. So looks like some kind of race condition.


Precise reproduction instructions:

 - download attachment 63239 [details]
 - click on "reports"
 - double-click on "Query_journal_NEW_REPORT_BUILDER"
 - in the new window that opens, right-click
 - in the context menu that appears, click "edit"
Comment 3 Ralph Peters 2012-06-19 22:17:09 UTC
In my case, it crashes 100% of the time on 2 different laptops running 3.5.5 RC1.  I am just lucky!
Comment 4 Lionel Elie Mamane 2012-06-20 01:48:01 UTC
This bug is new in 3.5.5beta and not present in 3.5.4. Introduced by

commit 4bc06051d1bf484a6f98186f0a2d168b3d98b9cc
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Thu May 24 08:57:17 2012 +0100

    Resolves: fdo#48932 super slow typing and scrolling in large documents

    Change-Id: I4de0a34f657143ef2d4409b604cc8e114dad132f
    
    Signed-off-by: Michael Stahl <mstahl@redhat.com>


I'm pushing to all branches...
Comment 5 Not Assigned 2012-06-20 06:12:57 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fa84c91b85b6934b21b02b07de1409be38425229&g=libreoffice-3-5

fdo#51243 infinite loop in SwFrameControlsManager::SetReadonlyControls


It will be available in LibreOffice 3.5.6.
Comment 6 Ralph Peters 2012-06-20 07:39:42 UTC
Hi,

*Wow, what quick work on this bug! * Thanks!
Any idea when 3.5.6 will be out so that I can get it fixed on my systems?

Thanks again!
Ralph Peters



On Wed, Jun 20, 2012 at 7:12 AM, <bugzilla-daemon@freedesktop.org> wrote:

> https://bugs.freedesktop.org/show_bug.cgi?id=51243
>
> libreoffice-bugs@lists.freedesktop.org changed:
>
>           What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>  Status Whiteboard|                            |target:3.5.6
>
> --- Comment #5 from libreoffice-bugs@lists.freedesktop.org 2012-06-20
> 06:12:57 PDT ---
> Lionel Elie Mamane committed a patch related to this issue.
> It has been pushed to "libreoffice-3-5":
>
>
> http://cgit.freedesktop.org/libreoffice/core/commit/?id=fa84c91b85b6934b21b02b07de1409be38425229&g=libreoffice-3-5
>
> fdo#51243 infinite loop in SwFrameControlsManager::SetReadonlyControls
>
>
> It will be available in LibreOffice 3.5.6.
>
> --
> Configure bugmail: https://bugs.freedesktop.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
>
Comment 7 Lionel Elie Mamane 2012-06-20 12:20:48 UTC
(In reply to comment #6)

> Any idea when 3.5.6 will be out so that I can get it fixed on my systems?

http://wiki.documentfoundation.org/ReleasePlan
3.5.6 (final) is planned for Week 38, Sep 17 - Sep 23, 2012
3.5.6.rc1 is planned for Week 36, Sep 3 - Sep 9, 2012

BUT:

1) I'm trying to get the fix in 3.5.5.rc2; I need three developers to OK it, I already have two, so looks good.

2) you can use 3.5.4, which does not have this bug. You can get it from http://downloadarchive.documentfoundation.org/libreoffice/old/3.5.4.2/
Comment 8 Not Assigned 2012-06-20 13:42:01 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-3-5-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ebfc2d227507cbb25c8cfdbf54e50286d76cc8d&g=libreoffice-3-5-5

fdo#51243 infinite loop in SwFrameControlsManager::SetReadonlyControls


It will be available already in LibreOffice 3.5.5.
Comment 9 Ralph Peters 2012-06-20 16:47:54 UTC
Thanks!
Where do I get the new tar.gz file?  Someplace like 
http://downloadarchive.documentfoundation.org/libreoffice ?
Ralph
Comment 10 Lionel Elie Mamane 2012-06-20 22:15:32 UTC
(In reply to comment #9)
> Where do I get the new tar.gz file?  Someplace like 
> http://downloadarchive.documentfoundation.org/libreoffice ?

The easiest is to wait for 3.5.5.rc2 to come out next week.

In general we have daily builds, but it seems none of our current automated build machines is building (the branch that will become) 3.5.5 or 3.5 these days.
Comment 11 Ralph Peters 2012-06-27 16:07:03 UTC
Hi,

I am all fired up to give your fix a try, and your  "optimal-row-height"
macro a try also!  Is 3.5.5rc2 available somewhere?

Ralph



On Wed, Jun 20, 2012 at 11:15 PM, <bugzilla-daemon@freedesktop.org> wrote:

> https://bugs.freedesktop.org/show_bug.cgi?id=51243
>
> Lionel Elie Mamane <lionel@mamane.lu> changed:
>
>           What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>             Status|ASSIGNED                    |RESOLVED
>         Resolution|                            |FIXED
>
> --- Comment #10 from Lionel Elie Mamane <lionel@mamane.lu> 2012-06-20
> 22:15:32 PDT ---
> (In reply to comment #9)
> > Where do I get the new tar.gz file?  Someplace like
> > http://downloadarchive.documentfoundation.org/libreoffice ?
>
> The easiest is to wait for 3.5.5.rc2 to come out next week.
>
> In general we have daily builds, but it seems none of our current automated
> build machines is building (the branch that will become) 3.5.5 or 3.5 these
> days.
>
> --
> Configure bugmail: https://bugs.freedesktop.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
>
Comment 12 Lionel Elie Mamane 2012-06-27 22:23:20 UTC
(In reply to comment #11)

> I am all fired up to give your fix a try, and your  "optimal-row-height"
> macro a try also!  Is 3.5.5rc2 available somewhere?

Not yet; it will appear at http://www.libreoffice.org/download/pre-releases/
Comment 13 Ralph Peters 2012-06-28 16:00:28 UTC
Hi,

I got rc2 and tried it out.  It doesn't crash when I try to edit the
report!  Hurray!

Now, I have been trying to use your macro.  I did the simple thing and
added a new macro in LibreOffice Basic macros.  If I "edit" my OptRowHeight
macro I see:

REM  *****  BASIC  *****

Sub Main
Dim rpt as Object
    rpt = ThisDatabaseDocument.ReportDocuments.getByName(rptName).open

    Dim tbls as Object, tbl as Object
    tbls = rpt.getTextTables()

    dim j as Integer
    for j = 0 to tbls.count() - 1
        tbl = tbls.getByIndex(j)
        if Left$(tbl.name, 6) = "Detail" then
            Dim rows as Object, col as long
            rows = tbl.Rows
            dim i as integer
            For i = 0 to rows.count - 1
                dim row as Object
                row = rows.getByIndex(i)
                row.IsAutoHeight = True
            Next i
        endif
    next j
End Sub


When I try to run it on the .odt report I get a failure on line:

rpt = ThisDatabaseDocument.ReportDocuments.getByName(rptName).open

with the failure being:
*Object variable not set *

Obviously, I'm missing something.....  Something is not setup
correctly....  (Yes, I haven't spent much time reading the "macro"
documentation.)

Thanks,
Ralph



On Wed, Jun 27, 2012 at 11:23 PM, <bugzilla-daemon@freedesktop.org> wrote:

> https://bugs.freedesktop.org/show_bug.cgi?id=51243
>
> --- Comment #12 from Lionel Elie Mamane <lionel@mamane.lu> 2012-06-27
> 22:23:20 PDT ---
> (In reply to comment #11)
>
> > I am all fired up to give your fix a try, and your  "optimal-row-height"
> > macro a try also!  Is 3.5.5rc2 available somewhere?
>
> Not yet; it will appear at
> http://www.libreoffice.org/download/pre-releases/
>
> --
> Configure bugmail: https://bugs.freedesktop.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
>