fdo#51243 infinite loop in SwFrameControlsManager::SetReadonlyControls

Change-Id: Id2c6fa349203b62869b75b9b8560c9ce7e365897

Signed-off-by: Fridrich Štrba <fridrich.strba@bluewin.ch>
(cherry picked from commit fa84c91b85b6934b21b02b07de1409be38425229)

Signed-off-by: Caolán McNamara <caolanm@redhat.com>